# Ludum_Dare_51

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  ZamianaNazw  ZamianaNazw.cpp
assets/Levels/: level1.lvl
assets/Shaders/: dummy_shader.frag
scripts/: build.sh  run.sh
src/: ColorIDMap.cpp  Game.hpp  Layers.hpp  main.cpp
src/Animation/: All.hpp  AnimationLoader.cpp  AnimationLoader.hpp  AnimationLoaderPrototypeFactory.cpp  AnimationLoaderPrototypeFactory.hpp  AnimationManager.cpp  AnimationManager.hpp  TextureLoader.cpp
src/GUI/: GUI.hpp  Panel.hpp  Text.cpp  Text.hpp
src/Inputs/: MouseHandler.cpp  MouseHandler.hpp
src/Layers/: Layers.cpp  Layers.hpp
src/Layers/ColorColliders/: ColorIDMap.hpp  ColorLookup.hpp
src/Loaders/: ResourceLoader.cpp  ResourceLoader.hpp
src/Managers/: KeymapManager.cpp  KeymapManager.hpp  MouseHandler.cpp  MouseHandler.hpp  SFEventManager.cpp  SFEventManager.hpp
src/Music/: All.hpp
src/Nodes/: Archer.cpp  Archer.hpp  Arrow.hpp  EnemiesPrototypes.hpp  Enemy.cpp  Enemy.hpp  EnemyPrototype.cpp  EnemyPrototype.hpp  EnemyWavesManager.hpp  Grid.cpp  Grid.hpp  Hero.cpp  Hero.hpp  LevelWaves.cpp  LevelWaves.hpp  MovingNode.cpp  MovingNode.hpp  Node.cpp  Node.hpp  SortNode.hpp  TestingShape.hpp  Wave.cpp  Wave.hpp  Weapon.cpp  Weapon.hpp
src/Renderer/: ColorMap.hpp  Renderer.cpp  Renderer.hpp
src/Renderer/ColorColliders/: ColorIDMap.cpp  ColorIDMap.hpp  (+1 more)
src/Scenes/: MainMenuScene.hpp  PlayLevelScene.hpp  Scene.hpp
src/Standard/: KeymapManager.cpp  KeymapManager.hpp  config.hpp  line.hpp
(+5 files in other folders)
